Working in Clion 2016.3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,10 @@ set(CMAKE_C_COMPILER ${MPI_C_COMPILER})
 find_package (MPI REQUIRED)
 include_directories( ${MPI_INCLUDE_PATH} )
 
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin)
+
 set(CMAKE_C_FLAGS "-std=gnu99  -march=native -O2 -pthread -Wall ${CMAKE_C_FLAGS} ${MPI_COMPILE_FLAGS}")
 
 set(SOURCE_FILES src/main.c src/matrix/mat.h src/matrix/mat.c src/matrix/mat_itr.c src/matrix/mat_itr.h src/matrix/smoother.c src/matrix/smoother.h src/matrix/mat_factory.c src/matrix/mat_factory.h src/matrix/bmark.h src/matrix/bmark.c src/spool/spool.c src/spool/spool.h src/debug.h src/messaging/msg_mngr.c src/messaging/msg_mngr.h src/spool/dispatcher.c src/spool/dispatcher.h)
