--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,8 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin)
 
 set(CMAKE_C_FLAGS "-std=gnu99  -march=native -O2 -pthread -Wall ${CMAKE_C_FLAGS} ${MPI_COMPILE_FLAGS}")
 
-set(SOURCE_FILES src/main.c src/matrix/mat.h src/matrix/mat.c src/matrix/mat_itr.c src/matrix/mat_itr.h src/matrix/smoother.c src/matrix/smoother.h src/matrix/mat_factory.c src/matrix/mat_factory.h src/matrix/bmark.h src/matrix/bmark.c src/spool/spool.c src/spool/spool.h src/debug.h src/messaging/msg_mngr.c src/messaging/msg_mngr.h src/spool/dispatcher.c src/spool/dispatcher.h)
+set(SOURCE_FILES src/main.c src/matrix/mat.h src/matrix/mat.c src/matrix/mat_itr.c src/matrix/mat_itr.h src/smoothing/smoother.c src/smoothing/smoother.h src/matrix/mat_factory.c src/matrix/mat_factory.h src/benchmarking/bmark.h src/benchmarking/bmark.c src/spool/spool.c src/spool/spool.h src/debug.h src/spool/spool_dispatcher.c src/spool/spool_dispatcher.h src/smoothing/dispatcher.c src/smoothing/dispatcher.h)
 
-add_executable(parallel_computation_cw2 ${SOURCE_FILES} src/matrix/mat.h src/matrix/mat.c src/matrix/smoother.c src/matrix/smoother.h src/matrix/bmark.h src/matrix/bmark.c src/spool/spool.c src/spool/spool.h src/debug.h src/messaging/msg_mngr.c src/messaging/msg_mngr.h src/spool/dispatcher.c src/spool/dispatcher.h)
+add_executable(parallel_computation_cw2 ${SOURCE_FILES} src/matrix/mat.h src/matrix/mat.c src/smoothing/smoother.c src/smoothing/smoother.h src/benchmarking/bmark.h src/benchmarking/bmark.c src/spool/spool.c src/spool/spool.h src/debug.h src/spool/spool_dispatcher.c src/spool/spool_dispatcher.h src/smoothing/dispatcher.c src/smoothing/dispatcher.h)
 
 target_link_libraries(parallel_computation_cw2 m)
